<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Do笔记</string>
    <string name="action_settings">设置</string>
    <string name="logo">Do笔记</string>
    <string name="setting">设置</string>
    <string name="title_activity_setting">设置</string>
    <string name="logo_setting">设置</string>
    <string name="set_tip1">闹钟设置</string>
    <string name="set_tip2">其他</string>
    <string name="search_note">搜索</string>
    <string name="search_activity">搜索</string>
    <string name="up_one_level">上一级</string>
    <string name="current_dir">.(刷新)</string>
    <string name="strFilePath">文件路径</string>
    <string name="strPermissionDeny">无权限访问该目录</string>
    <string name="share">分享到Do笔记</string>
    <string name="delete">删除</string>
    <string name="delete_group">删除分组</string>
    <string name="rename">重命名</string>
    <string name="hint_title">请输入标题</string>
    <string name="change_background">选择背景</string>
    <string name="choose_from_album">从相册中获取</string>
    <string name="default_group">默认笔记本</string>
    <string name="choose_color">画笔</string>
    <string name="save">保存</string>
    <string name="undo">撤销</string>
    <string name="clear">清除</string>
    <string name="file_browser">文件浏览</string>
    <string name="image_edit">图像编辑</string>
    <string name="file_info">文件浏览</string>
    <string name="notes">记事本</string>
    <string name="groups">分组</string>
    <string name="playing">播放中</string>
    <string name="press_to_record">开始录音</string>
    <string name="hint_input_keys">请输入关键字</string>
    <string name="shake_enable">摇动功能设置</string>
    <string name="shake_enable_rewrite">摇一摇重写</string>
    <string name="shake_to_add">摇一摇新建笔记</string>
    <string name="table_edit">表格编辑</string>
    <string name="add">添加</string>
    <string name="cancel_alarm">取消提醒</string>
    <string name="return_to_mainview">返回</string>
    <string name="will_delete_all_notes">将删除该分组下所有笔记</string>
    <string name="return_to_default_background">恢复默认背景</string>
    <string name="common_edit">普通编辑模式</string>
    <string name="free_edit">自由编辑模式</string>
    <string name="small">小</string>
    <string name="normal">正常</string>
    <string name="big">大</string>
    <string name="large">特大</string>
    <string name="set_time">设置时间</string>
    <string name="default_time">2013年5月13日</string>
    <string name="set_thing">设置内容</string>
    <string name="menu_choose">菜 单 选 项</string>
    <string name="delete_with_blank">删     除</string>
    <string name="open_with_blank">打     开</string>
    <string name="detect">绘制图形(矩形  圆形  表格)</string>
    <string name="write">添加文字</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="lock">  锁定  </string>
    <string name="move">  移动  </string>
    <string name="manage">  管理  </string>
    <string name="read">  朗读  </string>
    <string name="send">  发送  </string>
    <string name="location">位置  </string>
    <string name="accessory">附件</string>
    <string name="draw">涂鸦</string>
    <string name="image">相片</string>
    <string name="speech">语音</string>
    <string name="video">摄像</string>
    <string name="table">表格</string>
    <string name="record">录音</string>
    <string name="menu_send">发送</string>
    <string name="blank_tip">您还没有开始写笔记呢!点击右边的添加按钮开始写笔记吧:)</string>
    <string name="donote_account">Do笔记账号</string>
    <string name="password">密码</string>
    <string name="password_again">确认密码</string>
    <string name="login">登录</string>
    <string name="register">注册Do笔记账号</string>
    <string name="use_third">使用第三方账号登录</string>
    <string name="loose_to_refresh">松开即可同步</string>
    <string name="pull_down_to_refresh">下拉即可同步</string>
    <string name="syncing">正在同步数据…</string>
    <string name="sync_last_time">最后同步于:</string>
    <string name="batch_processing">批量处理</string>
    <string name="log_off">注销登录</string>
    <string name="bind_baidu">绑定百度云盘</string>
    <string name="baidu_cloud">百度云盘</string>
    <string name="cloud_space_usage">空间使用情况</string>
    <string name="upload_notes_accessory">上传笔记附件</string>
    <string name="download_notes_accessory">下载笔记附件</string>
    <string name="sort_way_created">按创建时间排序</string>
    <string name="sort_modify_time">按修改时间排序</string>
    <string name="edit_the_cell">编辑单元格内容</string>
    <string name="set_date">设置日期</string>
    <string name="interner_error">请检查网络连接</string>
    <string name="gps_error">定位失败</string>
    <string name="without_title">无标题</string>
    <string name="file_not_found_error">文件未找到  请尝试从百度云盘下载</string>
    <string name="blank_note">空笔记</string>
    <string name="without_disk">没有储存卡</string>
    <string name="cannot_find_path">没有找到储存目录</string>
    <string name="locating">正在定位</string>
    <string name="confirm_rewrite">确定重写吗?</string>
    <string name="rewrite">重写</string>
    <string name="tip">提示</string>
    <string name="weather_to_save">是否要保存</string>
    <string name="exit">退出</string>
    <string name="edit">请编辑</string>
    <string name="cannot_add_empty_group">不能添加空分组</string>
    <string name="confirm_delete">确认删除?</string>
    <string name="time_passed">闹钟时间已过</string>
    <string name="alarm_not_exist">该条闹钟不存在</string>
    <string name="detect_alarm">检测到以下提醒  点击条目可修改</string>
    <string name="note_locked">该笔记被锁定</string>
    <string name="delete_succeed">删除成功</string>
    <string name="note_share">分享</string>
    <string name="share_content">我想把这条笔记分享给你 \n标题 :</string>
    <string name="share_content_2">\n内容:</string>
    <string name="whole_note">全笔记</string>
    <string name="new_alarm_has_set">新增闹钟已设定</string>
    <string name="choose">请选择</string>
    <string name="move_succeed">移动成功</string>
    <string name="lock_succeed">锁定成功</string>
    <string name="unlock_succeed">解锁成功</string>
    <string name="the_note_hasnot_alarm">该条笔记无设置闹钟</string>
    <string name="decoding">正在译码  请稍候</string>
    <string name="cannot_create_thumbnail">无法生成缩略图</string>
    <string name="save_note">请先保存笔记</string>
    <string name="password_tip">请输入6到16位的账号和密码</string>
    <string name="please_wait">请稍等</string>
    <string name="logining">登录中…</string>
    <string name="account_error1">用户名或密码错误</string>
    <string name="login_failed">登录失败  请重试</string>
    <string name="register_succeed">注册成功</string>
    <string name="account_error2">用户名已存在</string>
    <string name="authorization_falied">授权失败  请稍后重试</string>
    <string name="alarm_title">Do笔记提醒</string>
    <string name="alarm_modified">闹钟已修改</string>
    <string name="cancel_succeed">取消成功</string>
    <string name="choose_alarm">请选择要删除的闹钟</string>
    <string name="ring_succeed">铃声设置成功</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="root_dir">根目录</string>
    <string name="up_one_level">上一级</string>
    <string name="choose_file">选择文件</string>
    <string name="choose_file_confirm">确认选择文件?</string>
    <string name="choose_file2">选择文件:</string>
    <string name="cancel_choose">取消选择</string>
    <string name="picture_processing">图片处理中</string>
    <string name="never_sync">从未同步</string>
    <string name="empty_draw">还没有画任何东西</string>
    <string name="add_row">添加行</string>
    <string name="add_column">添加列</string>
    <string name="file_size">文件大小:</string>
    <string name="sync_success">同步成功</string>
    <string name="baidu_cloud_has_binding">已绑定百度云</string>
    <string name="upload_notes_accessory_success">上传附件成功</string>
    <string name="download_notes_accessory_success">下载附件成功</string>
    <string name="free_group">自由编辑笔记</string>
    <string name="common_group">普通编辑笔记</string>
    <string name="rename_success">重命名成功</string>
    <string name="cannot_name_empty">不能命名为空分组</string>
    <string name="have_no_choice">没有选择条目</string>
    <string name="press_again">再按一次退出</string>
    <string name="sync_fail_login">同步失败  请尝试重新登录</string>
    <string name="sync_fail_internet">同步失败  请检查网络</string>
    <string name="qq_account_to_login">QQ账号登陆</string>
    <string name="modify_success">修改成功</string>
    <string name="begin_record">开始录音</string>
    <string name="end_record">结束录音</string>
    <string name="has_no_result">  无相关结果</string>
    <string name="alarm_ring">闹钟铃声</string>
    <string name="sort_way">笔记排序方式</string>
    <string name="font_size">字体大小</string>
    <string name="background">背景图片</string>
    <string name="choose_sort_way">请选择排序方式</string>
    <string name="choose_font_size">请选择字体大小</string>
    <string name="inconsistent">两次输入的密码不一致</string>
    <string name="login_with_sina">新浪账号登录</string>
    <string name="shake_sensitivity">摇动灵敏度</string>
    <string name="transparent">不透明度</string>
    <string name="paintsize">画笔粗细</string>
</resources>
