<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/choosetextsize"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#dcdcdc" >

    <RadioGroup
        android:id="@+id/choosetextsize_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/small_textsize"
            android:paddingLeft="40dp"
            android:text="@string/small" />

        <RadioButton
            android:id="@+id/normal_textsize"
            android:paddingLeft="40dp"
            android:text="@string/normal" />

        <RadioButton
            android:id="@+id/large_textsize"
            android:paddingLeft="40dp"
            android:text="@string/big" />

        <RadioButton
            android:id="@+id/huge_textsize"
            android:paddingLeft="40dp"
            android:text="@string/large" />
    </RadioGroup>

</LinearLayout>