<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#ffffff" >

    <RelativeLayout
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:background="#cccccc" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/menu_choose"
            android:textColor="#000000"
            android:textSize="21sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/define_delete"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:text="@string/delete_with_blank"
        android:gravity="center"
        android:background="@drawable/menu_button"
        android:textColor="#4169e1"
        android:textSize="18sp" />

    <Button
        android:id="@+id/define_fix"
        android:layout_width="180dp"
        android:background="@drawable/menu_button"
        android:layout_height="40dp"
        android:textColor="#4169e1"
        android:gravity="center"
        android:text="@string/open_with_blank"
        android:textSize="18sp" />

</LinearLayout>