<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:background="#ff404E4D"
    android:orientation="vertical" >

    <Button
        android:id="@+id/menu_gesture"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#00000000"
        android:drawableLeft="@drawable/handwriting_icon"
        android:paddingLeft="8dp"
        android:text="手写"
        android:textColor="#fffffafa"
        android:textSize="18sp" />

    <TextView
        android:layout_width="140dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="#ffC2CBCB" />
    
    <Button
        android:id="@+id/menu_site"
        android:layout_width="130dp"
        android:paddingLeft="8dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/ic_locate"
        android:background="#00000000"
        android:text="@string/location"
        android:textColor="#fffffafa"
        android:textSize="18sp" />

    <TextView
        android:layout_width="140dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="#ffC2CBCB" />

    <Button
        android:id="@+id/menu_addition"
        android:layout_width="130dp"
        android:paddingLeft="8dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/ic_addtition2"
        android:background="#00000000"
        android:text="@string/accessory"
        android:textColor="#fffffafa"
        android:textSize="18sp" />

   <TextView
        android:layout_width="140dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="#ffC2CBCB" />
    <Button
        android:id="@+id/menu_draw"
        android:layout_width="130dp"
        android:paddingLeft="8dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#00000000"
        android:drawableLeft="@drawable/ic_draw2"
        android:gravity="center"
        android:text="@string/draw"
        android:textColor="#fffffafa"
        android:textSize="18sp" />

    <TextView
        android:layout_width="140dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="#ffC2CBCB" />

    <Button
        android:id="@+id/menu_picture"
        android:layout_width="130dp"
        android:paddingLeft="8dp"
        android:layout_height="wrap_content"
       android:background="#00000000"
       android:layout_gravity="center"
        android:drawableLeft="@drawable/ic_picture2"
        android:text="@string/image"
        android:textColor="#fffffafa"
        android:textSize="18sp" />

    <TextView
        android:layout_width="140dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="#ffC2CBCB" />

    <Button
        android:id="@+id/menu_voice"
        android:layout_width="130dp"
        android:paddingLeft="8dp"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/ic_voice2"
        android:gravity="center"
        android:text="@string/speech"
        android:textColor="#fffffafa"
        android:textSize="18sp" />

    <TextView
        android:layout_width="140dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="#ffC2CBCB" />

    <Button
        android:id="@+id/menu_movie"
        android:layout_width="130dp"
        android:paddingLeft="8dp"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/ic_camera2"
        android:text="@string/video"
        android:textColor="#fffffafa"
        android:textSize="18sp" />

    <TextView
        android:layout_width="140dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="#ffC2CBCB" />
    <Button
        android:id="@+id/menu_table"
        android:layout_width="130dp"
        android:paddingLeft="8dp"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/ic_table"
        android:gravity="center"
        android:text="@string/table"
        android:textColor="#fffffafa"
        android:textSize="18sp" />

</LinearLayout>